# Tubes-OOP-1

./: CMakeLists.txt  README.md  main  makefile
config/: recipe.txt  state.txt  state2.txt  state3.txt  state333  state8.txt  stateray.txt  tes1.txt  tes2.txt  tes3.txt  tes4.txt
executable/: cli  gui
include/building/: material.h
include/tubesoop1/: filereader.h  grid.hpp  icosihexastring.h  state.h
include/tubesoop1/animal/: animal.h  animal_exception.h  carnivore.h  herbivore.h  hewanpeternakan.h  omnivore.h
include/tubesoop1/building/: bangunan_exception.h  building.cpp  building.h  material.cpp  material.h  resepbangunan.cpp  resepbangunan.h
include/tubesoop1/cli/: game.h  game.hpp  globals.hpp  pcolor.h  signal.hpp
include/tubesoop1/grid/: grid.h  grid.hpp  griddrawer.h  griddrawer.hpp  location.h  location.hpp  location_exception.h  location_exception.hpp
include/tubesoop1/gui/: game.h
include/tubesoop1/icosihexastring/: icosihexastring.h
include/tubesoop1/plant/: fruitplant.h  materialplant.h  plant.h  tanamanladang.h
include/tubesoop1/player/: inventory.h  ladang.h  petani.h  peternak.h  peternakan.h  player.h  player_partial.hpp  playervisitorpattern.h  taxreport.h  walikota.h
include/tubesoop1/product/: element.h  product.h  productvisitorpattern.h  visitorpattern.h
include/tubesoop1/quantifiable/: quantifiable.h  quantifiable.hpp
include/tubesoop1/resource/: creature.h  creature_exception.h  resource.h  resource.hpp  resourcecreator.h  resourcefactory.h  resourcefactory_exception.h  resourcetranslator.h  resourcetranslator_error.h
include/tubesoop1/resourcevisitorpattern/: resourcevisitorpattern.h  resourcevisitorpattern_exception.h  taker.h  taker.hpp
include/tubesoop1/shop/: Exception.h  shop.h  shop_exception.h
include/tubesoop1/something1/: class1.hpp
src/: icosihexastring.cpp  main.cpp
src/animal/: animal.cpp  animal_exception.cpp  animal_test.cpp  carnivore.cpp  creature.cpp  herbivore.cpp  hewanpeternakan.cpp  omnivore.cpp
src/building/: bangunan_exception.cpp  building.cpp  building_test.cpp
src/cli/: game.cpp  globals.cpp  main.cpp  pcolor.cpp  signal.cpp
src/grid/: grid.cpp  grid_test.cpp  griddrawer.cpp  location.cpp  location_exception.cpp  location_test.cpp
src/gui/: game.cpp  main.cpp
src/icosihexastring/: icosihexastring.cpp
src/pcolor/: pcolor.cpp
src/plant/: materialplant.cpp  plant.cpp  plant_test.cpp  tanamanladang.cpp
src/player/: inventory.cpp  ladang.cpp  petani.cpp  petani_test.cpp  peternak.cpp  peternak_test.cpp  peternakan.cpp  player.cpp  player_partial.cpp  taxreport.cpp  walikota.cpp  walikota_test.cpp
src/product/: product.cpp  product_test.cpp
src/quantifiable/: quantifiable.cpp  quantifiable_test.cpp
src/resource/: creature.cpp  creature_exception.cpp  resource.cpp  resourcefactory.cpp  resourcefactory_exception.cpp  resourcetranslator.cpp  resourcetranslator_error.cpp  tes
src/resourcevisitorpattern/: resource_exception.cpp  resourcevisitorpattern.cpp  taker.cpp
src/shop/: shop.cpp  shop_exception.cpp  shop_test.cpp
src/something1/: class1.cpp  class1_test.cpp
src/something2/: class2.cpp  class2_test.cpp
src/state/: state.cpp  state_exception.cpp
src/temp/: temp.cpp  temp_test.cpp
src/toko/: toko.cpp
src/txtparser/: txtparser.cpp
srcgui/: main.cpp
(+126 files in other folders)
